@@ -4310,6 +4310,7 @@ namespace Mono.CSharp {
 		{
 			Expression base_constructor_group;
 			Type t;
+			bool error = false;
 
 			ec.CurrentBlock = new ToplevelBlock (Block.Flags.Implicit, parameters, loc);
 
@@ -4340,34 +4341,34 @@ namespace Mono.CSharp {
 				loc);
 			
 			if (base_constructor_group == null){
+				error = true;
 				base_constructor_group = Expression.MemberLookup (
-					ec, t, ".ctor", MemberTypes.Constructor,
+					ec, t, null, t, ".ctor", MemberTypes.Constructor,
 					BindingFlags.NonPublic | BindingFlags.Instance | BindingFlags.DeclaredOnly,
 					loc);
+			}
 
-				if (base_constructor_group != null)
-					Report.Error (
-						112, loc, "`{0}.{1}' is inaccessible due to " +
-						"its protection level", t.FullName, t.Name);
-				else
-					Report.Error (
-						1501, loc, "Can not find a constructor for " +
-						"this argument list");
+			int errors = Report.Errors;
+			if (base_constructor_group != null)
+				base_constructor = (ConstructorInfo) Invocation.OverloadResolve (
+					ec, (MethodGroupExpr) base_constructor_group, argument_list,
+					false, loc);
+			
+			if (base_constructor == null) {
+				if (errors == Report.Errors)
+					Report.Error (1501, loc, "Can not find a constructor for this argument list");
 				return false;
 			}
-			
-			base_constructor = (ConstructorInfo) Invocation.OverloadResolve (
-				ec, (MethodGroupExpr) base_constructor_group, argument_list,
-				false, loc);
-			
-			if (base_constructor == null){
-				Report.Error (1501, loc,
-				       "Can not find a constructor for this argument list");
+
+			if (error) {
+				Report.Error (122, loc, "`{0}' is inaccessible due to its protection level",
+					      TypeManager.CSharpSignature (base_constructor));
+				base_constructor = null;
 				return false;
 			}
 			
 			if (base_constructor == caller_builder){
-				Report.Error (516, String.Format ("Constructor `{0}' can not call itself", TypeManager.CSharpSignature (caller_builder)));
+				Report.Error (516, loc, "Constructor `{0}' can not call itself", TypeManager.CSharpSignature (caller_builder));
 				return false;
 			}
 			
